refactor(vscode): update extension in extensions.json

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -17,7 +17,7 @@
     "guapibai.nunjucks-prettier",
     "humao.rest-client",
     "irongeek.vscode-env",
-    "jgclark.vscode-todo-highlight",
+    "gruntfuggly.todo-tree",
     "streetsidesoftware.code-spell-checker-persian",
     "streetsidesoftware.code-spell-checker",
     "stylelint.vscode-stylelint",
