chore(dependabot): update dependency groups and add ignore rules for major version updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -42,20 +42,27 @@ updates:
       - priority-low
       - maintenance
     groups:
-      production-dependencies:
-        dependency-type: 'production'
+      dependencies:
         exclude-patterns:
           - '@alwatr/*'
-          - 'fract'
-      development-dependencies:
-        dependency-type: 'development'
-        exclude-patterns:
-          - '@alwatr/*'
-          - 'fract'
-      alwatr-dependencies:
+          - 'alwatr'
+      alwatr:
         patterns:
           - '@alwatr/*'
-          - 'fract'
+          - 'alwatr'
+    ignore:
+      - dependency-name: "eslint"
+        update-types:
+          - version-update:semver-major
+      - dependency-name: "@typescript-eslint/eslint-plugin"
+        update-types:
+          - version-update:semver-major
+      - dependency-name: "@typescript-eslint/parser"
+        update-types:
+          - version-update:semver-major
+      - dependency-name: "conventional-changelog-conventionalcommits"
+        update-types:
+          - version-update:semver-major
 
   - package-ecosystem: docker
     directory: /packages/app
@@ -69,6 +76,10 @@ updates:
       - ci
       - priority-low
       - maintenance
+    ignore:
+      - dependency-name: "ghcr.io/alwatr/node"
+        update-types:
+          - version-update:semver-major
 
   - package-ecosystem: docker
     directory: /packages/api
@@ -82,3 +93,7 @@ updates:
       - ci
       - priority-low
       - maintenance
+    ignore:
+      - dependency-name: "ghcr.io/alwatr/node"
+        update-types:
+          - version-update:semver-major
