--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -1,4 +1,5 @@
-FROM ghcr.io/alwatr/node:22.9.0 AS builder
+ARG NODE_VERSION=22.10.0
+FROM ghcr.io/alwatr/node:${NODE_VERSION} AS builder
 
 RUN set -ex; \
   apk add --no-cache git; \
@@ -22,8 +23,8 @@ RUN set -eux; \
 
 # ---
 
-FROM ghcr.io/alwatr/node:22.9.0
-LABEL org.opencontainers.image.base.name="ghcr.io/alwatr/node:22.9.0"
+FROM ghcr.io/alwatr/node:${NODE_VERSION}
+LABEL org.opencontainers.image.base.name="ghcr.io/alwatr/node:${NODE_VERSION}"
 
 RUN apk add --no-cache curl
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --start-interval=1s --retries=3 CMD curl -fso /dev/null http://localhost/health || exit 1
