chore(dependabot): specify Dockerfile for app and api updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -66,6 +66,8 @@ updates:
 
   - package-ecosystem: docker
     directory: /packages/app
+    file:
+      - Dockerfile
     reviewers:
       - AliMD
     schedule:
@@ -83,6 +85,8 @@ updates:
 
   - package-ecosystem: docker
     directory: /packages/api
+    file:
+      - Dockerfile
     reviewers:
       - AliMD
     schedule:
